# proto

./: .clang-format  .clangd  .gitignore  .gitmodules  .pylintrc  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  Dockerfile  Doxyfile  LICENSE  Makefile  README.md  README.rst  TODO  compile_commands.json  config.mk  pyproject.toml  requirements.txt  setup.py
apps/: CMakeLists.txt  calib_camera.cpp  calib_stereo.cpp  calib_vicon_marker.cpp  detect_aprilgrid.cpp  ublox_base_station.cpp  ublox_rover.cpp  validate_intrinsics.cpp  validate_stereo.cpp
apps/config/: calib_camera.yaml  calib_stereo.yaml  calib_vicon_marker.yaml  detect_aprilgrid.yaml  validate_intrinsics.yaml  validate_stereo.yaml
proto/: '  .ycm_extra_conf.py  CMakeLists.txt  Makefile  aprilgrid.h  arducam.cpp  arducam.hpp  avs.cpp  avs.hpp  ceres_bridge.cpp  ceres_bridge.h  config.mk  euroc.c  euroc.h  gui.h  mr.py  munit.h  p3p.c  p3p.h  package.xml  proto.c  proto.h  proto.py  requirements.txt  robot_arm.py  sbgc.h  stb_image.h  test_euroc.c  test_gui.c  test_p3p.c  test_proto.c  test_sbgc.c  test_tis.c  test_ubx.c  tis.c  tis.h  tiscam_driver.c  ubx.h
proto/apps/: calib_camera.cpp  calib_stereo.cpp  validate_intrinsics.cpp
proto/archive/: Makefile  config.mk
proto/archive/lib/: config.cpp  control.cpp  core.cpp  core.hpp  cv.hpp  data.hpp  euroc.hpp  filter.hpp.hide  fs.hpp  se.hpp  timeline.hpp
proto/archive/tests/: Makefile
proto/benchmarks/: Makefile  bench_matmul-blas.c  bench_matmul-eigen.cpp
proto/benchmarks/scripts/: run.sh
proto/cmake/: ProtoConfig.cmake
proto/configs/: aprilgrid_6x6.yaml  validate_stereo.yaml
proto/firmware/comms/: i2c.h
proto/firmware/controls/: pid_ctrl.h
proto/firmware/sensors/: bmp280.h  mpu6050.h
proto/include/proto/: munit.hpp  proto.hpp
proto/js/: index.html
proto/lib/: Makefile  aprilgrid.cpp  aprilgrid.hpp  atl.cpp.hide  atl.hpp  config.mk  core.cpp  core.hpp  dense.hpp  factor.cpp  factor.hpp  filter.hpp  frontend.hpp  gui.c  gui.h  imshow.c.hide  imshow.h  kitti.hpp  munit.h  proto.c  proto.h  proto.hpp  se.cpp  test_gui.c  test_proto.c
proto/lib/js/: index.html  zero.js
proto/lib/shaders/: cube.vert  grid.frag
proto/lib/tests/: Makefile  test_gui.c  test_imshow.c  test_proto.c  test_template.c.hide  test_traj_eval.c.hide
proto/octave/: Makefile
proto/octave/notes/: fiducial_xy_jac.m  lie.m  sandbox.m
proto/octave/scripts/: run.sh
proto/proto/: aprilgrid.cpp  aprilgrid.hpp  atl.cpp  atl.hpp  core.cpp  core.hpp  dense.hpp  euroc.cpp  euroc.hpp  factor.hpp  filter.hpp  frontend.hpp  kitti.hpp  timeline.hpp
proto/python/: .style.yapf  feature_tracker.py  proto.py  pylintrc
proto/python/templates/: proto_plot.js
proto/scripts/: api.py  api2.py  comment_converter.py  download_euroc.py  format_code.bash  make_aprilgrid.py  make_cmodule.py  make_unittest.py  marg_sandbox.py  plot_frames.py  plot_gimbal_calib.py  plot_imu_odom.py  plot_inertial_odometry.py  plot_matrix.py  run.sh  tf_point.py
proto/scripts/chrony/: setup_chrony_client.sh
proto/shaders/: model.frag  model.vert
proto/src/apps/: atl.cpp  calib_camera.cpp  calib_stereo.cpp  detect_aprilgrid.cpp  validate_intrinsics.cpp  validate_stereo.cpp
proto/src/atl/: atl.cpp
proto/src/calib/: aprilgrid.cpp  calib_camera.cpp  calib_camera_nbv.cpp  calib_data.cpp  calib_gimbal.cpp  calib_stereo.cpp  calib_vicon_marker.cpp
proto/src/comm/: tcp.cpp
proto/src/control/: carrot_ctrl.cpp  pid.cpp
proto/src/core/: core.cpp  stb.cpp  tinyply.cpp
proto/src/dataset/: euroc.cpp  kitti.cpp
proto/src/estimation/: ba.cpp  dense.cpp  factor.cpp  filter.cpp  frontend.cpp  imu.cpp  measurement.cpp  vio.cpp
proto/src/mav/: atl.cpp  att_ctrl.cpp  lz.cpp  pos_ctrl.cpp  tk_ctrl.cpp  wp_ctrl.cpp
proto/src/model/: gimbal.cpp  model.cpp
proto/src/vision/: vision.cpp  vision_common.cpp
proto/src/viz/: camera.cpp  gui.cpp  mesh.cpp  model.cpp  shader.cpp  viz.cpp
proto/test_data/: test_marg.octave
proto/test_data/data_gnd/: camera_poses.csv
proto/test_data/sim_gimbal/: calib.config  poses.sim
proto/test_scripts/: plot_imu.py
proto/tests/: Makefile  template.cpp  test_atl.cpp  test_calib.cpp  test_core.cpp  test_factor.cpp  test_frontend.cpp  test_kitti.cpp
proto/tests/atl/: test_atl.cpp
proto/tests/calib/: test_aprilgrid.cpp  test_calib_camera.cpp  test_calib_camera_nbv.cpp  test_calib_data.cpp  test_calib_stereo.cpp  test_sandbox.cpp  test_sandbox2.cpp
proto/tests/control/: carrot_ctrl_test.cpp  pid_test.cpp
proto/tests/core/: test_core.cpp
proto/tests/dataset/: test_euroc.cpp
proto/tests/estimation/: test_ba.cpp  test_dense.cpp  test_factor.cpp  test_frontend.cpp
proto/tests/mav/: test_atl.cpp  test_att_ctrl.cpp  test_mission.cpp  test_pos_ctrl.cpp
proto/tests/model/: test_model.cpp
proto/tests/vision/: test_frontend.cpp  test_vision.cpp  test_vision_common.cpp
proto/tests/viz/: test_camera.cpp  test_cube.cpp  test_gui.cpp  test_mesh.cpp  test_plane.cpp
proto/viz/: index.html
proto_ros/: CMakeLists.txt  package.xml
proto_ros/cmake/: ImportProto.cmake
proto_ros/config/: atl.yaml  calib_webcam.yaml
proto_ros/launch/: calib_camera.launch  calib_sim.launch  calib_validate_mono.launch  calib_vicon.launch  calib_vicon_capture.launch  calib_vicon_validate.launch  camera.launch  example.launch  mav_sim.launch  px4_hover.launch  px4_sysid.launch  sim_calib.launch  sim_mav.launch
proto_ros/models/aprilgrid/: model.sdf
proto_ros/models/mav/: model.config
proto_ros/models/visensor/: model.config
proto_ros/scripts/: remote.py  run.sh
proto_ros/scripts/rosutils/: bag2csv.py  bag2vid.py  geometry_msgs.py  odom2csv.py  show_depth.py
proto_ros/worlds/: calib_sim.world
proto_ros2/: CMakeLists.txt  Makefile  output.txt  package.xml
proto_ros2/calibration/: calibration.sdf  gazebo_gui.config  server.config
proto_ros2/launch/: calib_sim.launch.py
proto_ros2/scripts/: run.sh
proto_ros2/src/: gimbal_dance.cpp  gz_gimbal.cpp  gz_utils.hpp
ros/proto_gazebo/: CMakeLists.txt  package.xml
ros/proto_ros/: CMakeLists.txt  package.xml
(+2502 files in other folders)
