[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "xyz"
version = "0.0.1"
description = "Robotics Library"
authors = [ { name = "Chris Choi", email = "chutsu@gmail.com" } ]
dependencies = [
  "ruff==0.12.2",
  "pyyaml==6.0.2",
  "requests==2.32.4",
  "websockets==15.0.1",
  "numpy==2.2.6",
  "scipy==1.15.3",
  "scipy-stubs==1.15.3.0",
  "pandas==2.3.0",
  "pandas-stubs==2.3.0.250703",
  "matplotlib==3.10.3",
  "matplotlib-stubs==0.1.0",
  "opencv-python==4.11.0.86",
  "opencv-stubs==0.0.12",
  "open3d-cpu==0.19.0",
]

[tool.ruff]
line-length = 80
indent-width = 2
target-version = "py311"  # or your Python version
select = ["I", "D"]


[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
