CMAKE_MINIMUM_REQUIRED(VERSION 2.8.3)

# C++ COMPILER SETTINGS
SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_BUILD_TYPE RELEASE)

# DEPENDENCIES
SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_LIST_DIR}/cmake")
FIND_PACKAGE(OpenCV REQUIRED)
FIND_PACKAGE(Ceres REQUIRED)
FIND_PACKAGE(Eigen3 REQUIRED)
FIND_PACKAGE(SuiteSparse REQUIRED)
INCLUDE(cmake/ImportEigen3.cmake)
INCLUDE_DIRECTORIES(${EIGEN3_INCLUDE_DIR} ${SUITESPARSE_INCLUDE_DIRS})

SET(
  DEPS
  prototype
  ${OpenCV_LIBS}
  ${SUITESPARSE_LIBRARIES}
  yaml-cpp
  apriltags
  ceres
)
ADD_EXECUTABLE(calib_camera calib_camera.cpp)
TARGET_LINK_LIBRARIES(calib_camera ${DEPS})

ADD_EXECUTABLE(calib_stereo calib_stereo.cpp)
TARGET_LINK_LIBRARIES(calib_stereo ${DEPS})

ADD_EXECUTABLE(calib_vicon_marker calib_vicon_marker.cpp)
TARGET_LINK_LIBRARIES(calib_vicon_marker ${DEPS})
