CMAKE_MINIMUM_REQUIRED(VERSION 2.8.3)
PROJECT(proto)

# C++ COMPILER SETTINGS
SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(BUILD_SHARED_LIBS ON)

FIND_PROGRAM(CCACHE_FOUND ccache)
IF(CCACHE_FOUND)
  SET_PROPERTY(GLOBAL PROPERTY RULE_LAUNCH_COMPILE ccache)
  SET_PROPERTY(GLOBAL PROPERTY RULE_LAUNCH_LINK ccache)
ENDIF(CCACHE_FOUND)

# DEPENDENCIES
SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_LIST_DIR}/cmake")
INCLUDE(cmake/ImportEigen3.cmake)
FIND_PACKAGE(OpenCV REQUIRED)
FIND_PACKAGE(OpenMP REQUIRED)
FIND_PACKAGE(Eigen3 REQUIRED)

# OPENMP
if (OPENMP_FOUND)
  SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
  SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
endif()

# INCLUDES
INCLUDE_DIRECTORIES(include)
INCLUDE_DIRECTORIES(${EIGEN3_INCLUDE_DIR})
SET(${PROJECT_NAME}_DEPS ${OpenCV_LIBS} yaml-cpp)

# LIBRARY
ADD_LIBRARY(
  ${PROJECT_NAME}
  # core
  src/core/core.cpp
  # src/core/stb.cpp
  # src/core/tinyply.cpp
  # # dataset
  # src/dataset/euroc.cpp
  # src/dataset/kitti.cpp
  # # estimation
  # # src/estimation/dense.cpp
  # src/estimation/factor.cpp
  # # src/estimation/filter.cpp
  # # src/estimation/frontend.cpp
)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${${PROJECT_NAME}_DEPS})
# TARGET_COMPILE_OPTIONS(${PROJECT_NAME} PRIVATE -Wall -Wextra -Werror)
INSTALL(
  DIRECTORY include/
  DESTINATION ${CMAKE_INSTALL_PREFIX}/include
  FILES_MATCHING PATTERN "*.h*"
)
INSTALL(
  FILES cmake/ProtoConfig.cmake
  DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/cmake/Proto
)

# UNIT TESTS
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/tests)
FILE(COPY tests/test_data DESTINATION ${PROJECT_BINARY_DIR}/tests)
FILE(COPY tests/scripts DESTINATION ${PROJECT_BINARY_DIR}/tests)
SET(
  UNITTESTS
  # atl-test_atl
  core-test_core
  # dataset-test_euroc
  # dataset-test_kitti
  # estimation-test_dense
  # estimation-test_factor
  # estimation-test_frontend
)
FOREACH(TEST ${UNITTESTS})
  STRING(REGEX REPLACE "-" "/" TEST_PATH ${TEST})
  ADD_EXECUTABLE(${TEST} tests/${TEST_PATH}.cpp)
  TARGET_LINK_LIBRARIES(${TEST} ${PROJECT_NAME} ${${PROJECT_NAME}_DEPS})
ENDFOREACH(TEST)
