CMAKE_MINIMUM_REQUIRED(VERSION 2.8.3)
PROJECT(proto)

# BUILD SETTINGS
SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(BUILD_SHARED_LIBS ON)

# CCACHE
FIND_PROGRAM(CCACHE_FOUND ccache)
IF(CCACHE_FOUND)
  SET_PROPERTY(GLOBAL PROPERTY RULE_LAUNCH_COMPILE ccache)
  SET_PROPERTY(GLOBAL PROPERTY RULE_LAUNCH_LINK ccache)
ENDIF(CCACHE_FOUND)

# DEPENDENCIES
SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_LIST_DIR}/cmake")
INCLUDE(cmake/ProtoConfig.cmake)

# INCLUDES
INCLUDE_DIRECTORIES(.)

# LIBRARY
ADD_LIBRARY(
  ${PROJECT_NAME}
  proto/aprilgrid.cpp
  proto/core.cpp
)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${PROTO_DEPS})
# TARGET_COMPILE_OPTIONS(${PROJECT_NAME} PRIVATE -Wall -Wextra -Werror)
INSTALL(
  DIRECTORY include/
  DESTINATION ${CMAKE_INSTALL_PREFIX}/include
  FILES_MATCHING PATTERN "*.h*"
)
INSTALL(
  FILES cmake/ProtoConfig.cmake
  DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/cmake/Proto
)

# UNIT TESTS
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/tests)
FILE(COPY tests/test_data DESTINATION ${PROJECT_BINARY_DIR}/tests)
FILE(COPY tests/scripts DESTINATION ${PROJECT_BINARY_DIR}/tests)
SET(
  UNITTESTS
  # atl-test_atl
  core-test_core
  dataset-test_euroc
  dataset-test_kitti
  # estimation-test_dense
  estimation-test_factor
  # estimation-test_frontend
)
FOREACH(TEST ${UNITTESTS})
  STRING(REGEX REPLACE "-" "/" TEST_PATH ${TEST})
  ADD_EXECUTABLE(${TEST} tests/${TEST_PATH}.cpp)
  TARGET_LINK_LIBRARIES(${TEST} ${PROJECT_NAME} ${PROTO_LIBRARIES})
ENDFOREACH(TEST)
